Fixed border sizing + made it visible again

--- a/style.css
+++ b/style.css
@@ -10,13 +10,13 @@ body {
 }
 
 .phoneborder {
-    position: fixed;
-    top: 4vh;
-    left: 79vh;
+    top: 1.5vh;
+    position: absolute;
     z-index: 10;
     pointer-events: none;
-    height: 90vh;
-
+    height: 89.9vh;
+    width: 45vh;
+    /* opacity: 0%; */
 }
 
 .container {
